# trading-systems

./: .gitignore  docker-compose.yml  package-lock.json
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: speckit.manifest.json  windsurf.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_stocks_and_ohlcv_tables.py  002_create_backtest_tables.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: backtest.py  export.py  import_jobs.py  ohlcv.py  stocks.py
backend/app/core/: datetime_utils.py  exceptions.py  logging.py  middleware.py
backend/app/models/: __init__.py  backtest_config.py  backtest_result.py  import_job.py  ohlcv.py  stock.py  trade.py
backend/app/schemas/: __init__.py  backtest.py  ohlcv.py  stock.py
backend/app/services/: __init__.py  backtest_engine.py  backtest_service.py  export_service.py  import_job_service.py  metrics_calculator.py  ohlcv_service.py  stock_service.py  yfinance_client.py
backend/tests/: conftest.py
backend/tests/integration/: test_backtest_api.py  test_cors.py  test_ohlcv_api.py  test_stocks_api.py  test_timeframe_aggregation.py
backend/tests/unit/: test_backtest_engine.py  test_export_service.py  test_ohlcv_service.py  test_position_sizing.py  test_yfinance_client.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
(+56 files in other folders)
